fixed firefox stretching?

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header {
     #collage img {
         width: 100%;
         height: auto;
+        display: block;
     }
 }
 
@@ -40,5 +41,6 @@ header {
     #collage img {
         width: 50%;
         height: auto;
+        display: block;
     }
 }
